@@ -324,6 +324,9 @@ Bug Fixes
   
 * SOLR-5039: Admin/Schema Browser displays -1 for term counts for multiValued fields.
 
+* SOLR-5037: The CSV loader now accepts field names that are not in the schema.
+  (gsingers, ehatcher, Steve Rowe)
+
 Optimizations
 ----------------------
 
